small style adjustments

--- a/map/index.html
+++ b/map/index.html
@@ -8,7 +8,7 @@
     <title>Map</title>
 </head>
 <header>
-    <em class="game-title">Autumn Leaf</em>
+    <h2 class="game-title">Autumn Leaf</h2>
     <div class="profile">
         <img id="picture" src="">
         <span id="name"></span>
