--- a/quest/index.html
+++ b/quest/index.html
@@ -30,7 +30,7 @@
     <p id="description"></p>
     <form id="choice-form">
         <p id="choices"></p>
-        <button>Final Decision</button>
+        <button>Let's give it a try</button>
     </form>
     <section id="result" class="hidden">
         <p id="result-description"></p>
